Add functionality to save client list column configuration to database

--- a/Kitodo/src/main/webapp/WEB-INF/templates/baseListView.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/baseListView.xhtml
@@ -34,5 +34,6 @@
             </ui:insert>
         </p:panel>
         <h:outputScript name="content.js" target="body" library="js"/>
+        <p:ajaxStatus onstart="PF('loadingDialog').show()" oncomplete="PF('loadingDialog').hide()"/>
     </ui:define>
 </ui:composition>
