--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/userList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/userList.xhtml
@@ -15,7 +15,6 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable var="item"
                  id="usersTable"
@@ -26,36 +25,36 @@
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
         <p:column headerText="#{msgs.username}"
-                  rendered="#{fn:contains(fn:join(UserForm.selectedColumns, '-'), 'user.username')}">
+                  rendered="#{UserForm.showColumn('user.username')}">
             <h:outputText value="#{item.surname}, #{item.name}"/>
         </p:column>
         <p:column headerText="#{msgs.location}"
-                  rendered="#{fn:contains(fn:join(UserForm.selectedColumns, '-'), 'user.location')}">
+                  rendered="#{UserForm.showColumn('user.location')}">
             <h:outputText value="#{item.location}"/>
         </p:column>
         <p:column headerText="#{msgs.roles}"
-                  rendered="#{fn:contains(fn:join(UserForm.selectedColumns, '-'), 'user.roles')}">
+                  rendered="#{UserForm.showColumn('user.roles')}">
             <ui:repeat var="role" value="#{item.roles}" varStatus="status">
                 <h:outputText value="#{role.title}"/>
                 <h:outputText value=", " rendered="#{not status.last}"/>
             </ui:repeat>
         </p:column>
         <p:column headerText="#{msgs.clients}"
-                  rendered="#{fn:contains(fn:join(UserForm.selectedColumns, '-'), 'user.clients')}">
+                  rendered="#{UserForm.showColumn('user.clients')}">
             <ui:repeat var="client" value="#{item.clients}" varStatus="status">
                 <h:outputText value="#{client.name}"/>
                 <h:outputText value=", " rendered="#{not status.last}"/>
             </ui:repeat>
         </p:column>
         <p:column headerText="#{msgs.projects}"
-                  rendered="#{fn:contains(fn:join(UserForm.selectedColumns, '-'), 'user.projects')}">
+                  rendered="#{UserForm.showColumn('user.projects')}">
             <ui:repeat var="project" value="#{item.projects}" varStatus="status">
                 <h:outputText value="#{project.title}"/>
                 <h:outputText value=", " rendered="#{not status.last}"/>
             </ui:repeat>
         </p:column>
         <p:column headerText="#{msgs.active}"
-                  rendered="#{fn:contains(fn:join(UserForm.selectedColumns, '-'), 'user.active')}"
+                  rendered="#{UserForm.showColumn('user.active')}"
                   styleClass="checkboxColumn">
             <h:outputText>
                 <ui:fragment rendered="#{UserForm.checkUserLoggedIn(item)}">
