--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -15,7 +15,6 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable var="item"
                  value="#{ProjectForm.lazyDTOModel}"
@@ -33,15 +32,19 @@
             <p:rowToggler/>
         </p:column>
 
-        <p:column headerText="#{msgs.title}" rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'project.title')}">
+        <p:column headerText="#{msgs.title}"
+                  rendered="#{ProjectForm.showColumn('project.title')}">
             <h:outputText value="#{item.title}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.metsRightsOwner}" rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'project.metsRightsOwner')}">
+        <p:column headerText="#{msgs.metsRightsOwner}"
+                  rendered="#{ProjectForm.showColumn('project.metsRightsOwner')}">
             <h:outputText value="#{item.metsRightsOwner}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.active}" styleClass="checkboxColumn" rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'project.active')}">
+        <p:column headerText="#{msgs.active}"
+                  styleClass="checkboxColumn"
+                  rendered="#{ProjectForm.showColumn('project.active')}">
             <h:outputText>
                 <ui:fragment rendered="#{item.isActive()}">
                     <i class="fa fa-check-square-o fa-lg checkbox-checked"/>
@@ -52,7 +55,8 @@
             </h:outputText>
         </p:column>
 
-        <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
+        <p:column headerText="#{msgs.actions}"
+                  styleClass="actionsColumn">
             <h:form id="projectActionForm">
                 <h:link id="viewProject" rendered="#{SecurityAccessController.hasAuthorityToViewProject() and not SecurityAccessController.hasAuthorityToEditProject()}"
                         outcome="projectEdit" title="#{msgs.projectView}">
