--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -36,12 +36,12 @@
 
         <p:column headerText="#{msgs.title}"
                   sortBy="#{item.title}"
-                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'template.title')}">
+                  rendered="#{ProjectForm.showColumn('template.title')}">
             <h:outputText value="#{item.title}"/>
         </p:column>
 
         <p:column headerText="#{msgs.ruleset}"
-                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'template.ruleset')}">
+                  rendered="#{ProjectForm.showColumn('template.ruleset')}">
             <h:outputText value="#{item.ruleset.title}"/>
         </p:column>
 
