--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/clientList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/clientList.xhtml
@@ -24,7 +24,7 @@
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
         <p:column headerText="#{msgs.client}"
-                  rendered="#{fn:contains(fn:join(ClientForm.selectedColumns, '-'), 'client.client')}">
+                  rendered="#{UserForm.showColumn('client.client')}">
             <h:outputText value="#{item.name}"/>
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
