--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -15,6 +15,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:p="http://primefaces.org/ui">
     <h:form id="processesForm">
         <p:dataTable id="processesTable" var="process" value="#{ProcessForm.lazyDTOModel}"
@@ -43,9 +44,9 @@
             <!-- FIXME: save process properties configured in 'kitodo_config.properties' as "listColumns" to database when application starts! -->
             <p:columns value="#{ProcessForm.getProcessPropertyNames()}"
                        var="propertyName"
-                       headerText="#{propertyName}"
+                       headerText="#{fn:replace(propertyName, 'process.', '')}"
                        rendered="#{ProcessForm.showColumn(propertyName)}">
-                <h:outputText value="#{ProcessForm.getPropertyValue(process, propertyName)}"/>
+                <h:outputText value="#{ProcessForm.getPropertyValue(process, fn:replace(propertyName, 'process.', ''))}"/>
             </p:columns>
             <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
                 <h:link id="viewProcess" outcome="processEdit" title="#{msgs.processView}"
