--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/projectsWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/projectsWidget.xhtml
@@ -20,10 +20,14 @@
                  value="#{DesktopForm.projects}"
                  scrollable="true"
                  var="project">
-        <p:column headerText="#{msgs.title}" styleClass="project-table-column">
+        <p:column headerText="#{msgs.title}"
+                  rendered="#{ProjectForm.showColumn('project.title')}"
+                  styleClass="project-table-column">
             <h:outputText value="#{project.title}"/>
         </p:column>
-        <p:column headerText="#{msgs.metsRightsOwner}" styleClass="project-table-column">
+        <p:column headerText="#{msgs.metsRightsOwner}"
+                  rendered="#{ProjectForm.showColumn('project.metsRightsOwner')}"
+                  styleClass="project-table-column">
             <h:outputText value="#{project.metsRightsOwner}"/>
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn project-table-column">
