--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/comment.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/comment.xhtml
@@ -26,9 +26,9 @@
                              rendered="#{!empty MetadataProcessor.wikiField}">
                     <p:column style="width: 100%" rendered="#{item.contains('Red K')}">
                         <p:outputLabel value="#{msgs.correctionK}" style="color:red;font-weight:bold;"/>
-                        <p:inputTextarea value="#{fn:replace(item,'Red K','')}"
-                                         style="width:100%;"
-                                         readonly="true"/>
+                        <h:outputText value="#{fn:replace(item,'Red K','')}"
+                                      escape="false"
+                                      style="width:100%;"/>
                         <p:commandButton icon="fa fa-check" update="commentsBox"
                                          title="test" styleClass="right" immediate="true"
                                          action="#{MetadataProcessor.solveProblem(item)}">
@@ -37,15 +37,15 @@
 
                     <p:column style="width: 100%" rendered="#{item.contains('Orange K')}">
                         <p:outputLabel value="#{msgs.correctionK}" style="color:orange;font-weight:bold;"/>
-                        <p:inputTextarea value="#{fn:replace(item,'Orange K','')}"
-                                         style="width:100%;"
-                                         readonly="true"/>
+                        <h:outputText value="#{fn:replace(item,'Orange K','')}"
+                                      escape="false"
+                                      style="width:100%;"/>
                     </p:column>
                     <p:column style="width: 100%"
                               rendered="#{!(item.contains('Red K')) and !(item.contains('Orange K'))}">
-                        <p:inputTextarea value="#{fn:replace(item,'Red K','')}"
-                                         style="width:100%;"
-                                         readonly="true"/>
+                        <h:outputText value="#{item}"
+                                      escape="false"
+                                      style="width:100%;"/>
                     </p:column>
                 </p:dataTable>
                 <p:column>
