--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/header.xhtml
@@ -17,22 +17,32 @@
         xmlns:p="http://primefaces.org/ui">
     <p:panel styleClass="content-header">
         <h3>
-            <h:outputText value="#{msgs.metadataEdit} (#{MetadataProcessor.process.title})"/>
+            <h:outputText value="#{MetadataProcessor.process.title} - #{msgs.metadataEdit}"
+                          title="#{MetadataProcessor.process.title} - #{msgs.metadataEdit}"/>
         </h3>
-        <p:commandButton id="save"
-                         widgetVar="save"
-                         action="#{MetadataProcessor.saveMetadataToXmlAndGoToProcessPage}"
-                         value="#{msgs.save}"
-                         icon="fa fa-floppy-o fa-lg"
-                         iconPos="right"
-                         onclick="PF('sticky-notifications').renderMessage({'summary':'#{msgs.metadataSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
-                         update="notifications"/>
-        <p:commandButton value="#{msgs.validate}"
-                         action="#{MetadataProcessor.validate}"
-                         update="metadataEditor"
-                         icon="fa fa-check fa-lg"
-                         iconPos="right"
-                         styleClass="secondary-button"/>
-        <p:button value="#{msgs.cancel}" outcome="#{MetadataProcessor.referringView}" icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
+        <span class="button-wrapper">
+            <p:button value="#{msgs.cancel}"
+                      outcome="#{MetadataProcessor.referringView}"
+                      icon="fa fa-times fa-lg"
+                      iconPos="right"
+                      style="margin-left: 16px;"
+                      styleClass="secondary"/>
+            <p:commandButton value="#{msgs.validate}"
+                             action="#{MetadataProcessor.validate}"
+                             update="metadataEditor"
+                             icon="fa fa-check fa-lg"
+                             iconPos="right"
+                             style="margin-left: 16px;"
+                             styleClass="secondary"/>
+            <p:commandButton id="save"
+                             widgetVar="save"
+                             action="#{MetadataProcessor.saveMetadataToXmlAndGoToProcessPage}"
+                             value="#{msgs.save}"
+                             icon="fa fa-floppy-o fa-lg"
+                             iconPos="right"
+                             style="margin-left: 16px;"
+                             onclick="PF('sticky-notifications').renderMessage({'summary':'#{msgs.metadataSaving}','detail':'#{msgs.youWillBeRedirected}','severity':'info'});"
+                             update="notifications"/>
+        </span>
     </p:panel>
 </ui:composition>
