Fix display of TIFF directory selection label

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -1217,6 +1217,11 @@ Column content
     background: #f3f3f3;
 }
 
+#imagePreviewForm\:tifFoldersLabel {
+    color: var(--default-bright);
+    line-height: var(--input-height);
+}
+
 #imagePreviewForm\:imageControlPanel button {
     margin-right: 0;
 }
